# uniswap_revision

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.uv/: config.toml
code/01_create/: 00_convert_all_swap_data_to_daily_prices.py  01_pre_process_data.py  02_to_panel.py  03_to_panel.py
codes/01_create/: 00_convert_all_swap_data_to_daily_prices.py  01_pre_process_data.py  02_to_panel.py  03_to_panel.py  04_to_panel.py  12_each_position_creation_time_data.py  13_each_lp_creation_type_data.py  14_each_sc_position_creation_type_data.py  17_user_level_panel_level_sc_agg_cumulative_asset_deposited_version.py  panel_creator.py  position_processors.py
codes/02_analysis/: 00_regression.py  01_disposition_effect.py  01_disposition_effect_0826_testing.py  02_overconfidence.py
codes/03_web_crawl/: 00_get_SC_list.py  01_SC_info.py  02_crawl_sc_source_code.py  config.py  helpers.py
codes/04_jupyter_notebooks/: 20240131_system_rec_vs_self_operating.ipynb  20240213_figures.ipynb  20240228_figures.ipynb  20240826_trading_behavior.ipynb  20240907_heterogeneity.ipynb  20241014_data_test.ipynb  20241104_token_transfer_scs.ipynb  Change_Dynamic_Type.ipynb  Change_Mixed.ipynb  Graphing.ipynb  Similar R procedure.ipynb  smart_contract_all.ipynb  testing_original_data.ipynb
codes/create/: 00_convert_all_swap_data_to_daily_prices.py  04_to_panel_0912try.py  11_get_each_position_data.py  13_each_lp_creation_type_data.py.bak  15_position_level_aggregation.py  16_user_level_panel_level_sc_agg.py.bak2  create_tables.sql  grab_data.py  grab_data_large_pools.py  insert_into_db.py  mint_query.sql  pool_create_query.sql  pool_initialize_query.sql  position_processors.py  process_pricing_data.py  split_csv.py  swaps.sql  (+2 more)
(+31 files in other folders)
