[tool.poetry]
name = "uniswap-eqality"
version = "0.1.0"
description = ""
authors = ["Alle Zehan Zhao"]
readme = "README.md"
packages = [{include = "uniswap_eqality"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10, <3.12"
gmpy2 = "^2.1.5"
pandas = "^2.0.2"
tqdm = "^4.65.0"
easydict = "^1.10"
parallel-pandas = "^0.5.0"
pandarallel = "^1.6.5"
scipy = "^1.11.1"
jupyter = "^1.0.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
